--- a/css/style.css
+++ b/css/style.css
@@ -7,14 +7,26 @@
     --text-black-900:#302e4d;
     --text-black-700:#504e70;
 }
+body.dark
+{
+    --bg-black-900:#151515;
+    --bg-black-100:#222222;
+    --bg-black-50:#393939;
+    --text-black-900:#ffffff;
+    --text-black-700:#e9e9e9;
+}
 
+.experience{
+    display: none;
+}
 body
 {
     line-height: 1.5;
     font-size: 16px;
     font-family: sans-serif, 'Poppins';
 }
-*{
+*
+{
     margin: 0;
     padding: 0;
     outline: none;
@@ -188,8 +200,8 @@ ul
     border: 1px solid var(--bg-black-50);
     cursor: pointer;
     position: fixed;
-    left: 300px;
-    top: 20px;
+    left: 30px;
+    top: 30px;
     border-radius: 5px;
     background: var(--bg-black-100);
     display: none;
@@ -516,4 +528,266 @@ h3.my-profession
     font-size: 16px;
     text-align: justify;
     color: var(--text-black-700);
+}
+/* End About */
+/* Start Services */
+.service .container
+{
+    padding-bottom: 70px;
+}
+.service .service-item
+{
+    margin-bottom: 30px;
+    flex: 0 0 33.333333%;
+    max-width: 33.333333%;
+}
+.service .service-item .service-item-inner
+{
+    background-color: var(--bg-black-100);
+    border: 1px solid var(--bg-black-50);
+    border-radius: 10px;
+    padding: 30px 15px;
+    text-align: center;
+    transition: all 0.3s ease;
+}
+.service .service-item .service-item-inner:hover
+{
+    box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
+}
+.service .service-item .service-item-inner .icon
+{
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+    display: block;
+    margin: 0 auto 30px;
+    text-align: center;
+    transition: all 0.3s ease;
+}
+.service .service-item .service-item-inner .icon .fa
+{
+    font-size: 40px;
+    line-height: 60px;
+    color: var(--skin-color);
+    transition: all;
+}
+.service .service-item .service-item-inner:hover .icon
+{
+    background-color: var(--skin-color);
+}
+.service .service-item .service-item-inner:hover .icon .fa
+{
+    font-size: 25px;
+    color: #ffffff;
+}
+.service .service-item .service-item-inner h4
+{
+    font-size: 18px;
+    margin-bottom: 15px;
+    color: var(--text-black-900);
+    font-weight: 700;
+    text-transform: capitalize;
+}
+.service .service-item .service-item-inner p
+{
+    font-size: 16px;
+    color: var(--text-black-700);
+    line-height: 25px;
+}
+/* End Services */
+/* Start Portfolio */
+.portfolio .container
+{
+    padding-bottom: 40px;
+}
+.portfolio .portfolio-heading
+{
+    flex: 0 0 100%;
+    max-width: 100%;
+    margin-bottom: 40px;
+}
+.portfolio .portfolio-heading h2
+{
+    color: var(--text-black-900);
+    font-weight: 500;
+}
+.portfolio .portfolio-item
+{
+    margin-bottom: 30px;
+    flex: 0 0 33.333333%;
+    max-width: 33.333333%;
+}
+.portfolio  .portfolio-item-inner
+{
+    border: 6px solid var(--bg-black-100);
+    border-radius: 10px;
+    overflow: hidden;
+    cursor: pointer;
+}
+.portfolio .portfolio-item-inner .portfolio-img img
+{
+    height: 200px;
+    display: block;
+    object-fit: cover;
+    width: 100%;
+}
+/* End Portfolio */
+/* Start Contact */
+.contact-title
+{
+    color:  var(--skin-color);
+    text-align: center;
+    font-size: 25px;
+    margin-bottom: 10px;
+}
+.contact-sub-title
+{
+    color:  var(--text-black-900);
+    text-align: center;
+    font-size: 15px;
+    margin-bottom: 60px;
+}
+
+.contact .contact-info-item
+{
+    flex: 0 0 33.3333%;
+    max-width: 33.3333%;
+    text-align: center;
+    margin-bottom: 60px;
+}
+.contact .contact-info-item .icon
+{
+    display: inline-block;
+}
+.contact .contact-info-item .icon .fa
+{
+    font-size: 25px;
+    color: var(--skin-color);
+}
+
+.contact .contact-info-item h4
+{
+    font-size: 18px;
+    color: var(--text-black-700);
+    font-weight: 700;
+    text-transform: capitalize;
+    margin: 15px 0px 5px;
+}
+.contact .contact-info-item p
+{
+    font-size: 16px;
+    color: var(--text-black-700);
+    line-height: 25px;
+    font-weight: 400;
+}
+.contact .contact-form
+{
+    flex: 0 0 100%;
+    max-width: 100%;
+}
+.contact .contact-form .col-6
+{
+    flex: 0 0 50%;
+    max-width: 50%;
+
+}
+.contact .contact-form .col-12
+{
+    flex: 0 0 100%;
+    max-width: 100%;
+}
+.contact .contact-form .form-item
+{
+    margin-bottom: 30px;
+}
+.contact .contact-form .form-item .form-control
+{
+    width: 100%;
+    height: 50px;
+    border-radius: 25px;
+    background: var(--bg-black-100);
+    border: 1px solid var(--bg-black-50);
+    padding: 10px 25px;
+    font-size: 16px;
+    color: var(--text-black-700);
+    transition: all 0.3s ease;
+    font-family: sans-serif, 'Poppins';
+}
+.contact .contact-form .form-item .form-control:focus
+{
+    box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
+}
+.contact .contact-form .form-item textarea.form-control
+{
+    height: 140px;
+}
+.contact .contact-form  .btn
+{       
+    height: 50px;
+    padding: 0px 50px;
+}
+.highlight {
+    color:  var(--text-black-900);
+    font-weight: 550; /* Negrita moderada para énfasis */
+}
+/* End Contact */
+
+@media (max-width:1199px)
+{
+    .aside
+    {
+        left: -270px;
+        height: 100%;
+        transition: all 0.3s ease;
+    }
+    .aside.open
+    {
+        left: 0;
+    }
+
+    .main-container
+    {
+        padding-left: 0;
+    }
+    .about .about-content .personal-info .info-item p span
+    {
+        display: block;
+        margin-left: 0;
+    }
+}
+@media (max-width:991px)
+{
+    .contact .contact-info-item,
+    .portfolio .portfolio-item,
+    .service .service-item
+    {
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
+
+    .home .home-info
+    {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+    .home .home-img
+    {
+        display: none;
+    }
+}
+
+@media (max-width:767px)
+{   
+    .contact .contact-form .col-6,
+    .contact .contact-info-item,
+    .portfolio .portfolio-item,
+    .service .service-item,
+    .about .about-content .experience,
+    .about .about-content .education,
+    .about .about-content .skills,
+    .about .about-content .personal-info
+    {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
 }
